# egui_cross_platform_starter_kit

./: .gitignore  Cargo.toml  README.md  index.html
src/: app.rs  main.rs
