[package]
name    = "egui_cross_platform_starter_kit"
version = "0.1.0"
edition = "2024"

[dependencies]
# The feature persistance exists on both egui and eframe.
#
# On egui it adds #[derive(Serialize, Deserialize)] on a bunch of types.
# On eframe it does the actual persistence (and adds the feature flag to egui).
#
# https://github.com/emilk/egui/issues/733
eframe = { version = "0.34.1", features = ["persistence"] }
egui   = "0.34.1"

serde  = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image    = "0.25.9"
mimalloc = "0.1.48"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures     = "0.4.58"
web-sys                  = "0.3.85"
console_error_panic_hook = "0.1.7"
